test/grammar/schema/stmt_block/stmt_block_fail_0/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:7:5
  |
7 |     name = _name
  |     ^ expected str, got int
  |